# ai-arena-bomberman

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  ai-arena.bot.config.json  ai-arena.game.config.json  ai-arena.game.json  ai-arena.server.config.json  clean.sh  game-description.md  package_bot.sh  package_server.sh  readme.md
bot/: AI.cpp  AI.h  Backtrack.cpp  Backtrack.h  CMakeLists.txt  Objective.cpp  Objective.h  PathFinder.cpp  PathFinder.h  SafetyChecker.cpp  SafetyChecker.h  connector.h  console_connector.h  main.cpp  platform_dep.h  socket_connector.h  solver.cpp  solver.h
common/: GameState.cpp  GameState.h  Grid.cpp  Grid.h  RandomGenerator.cpp  RandomGenerator.h  ScoreCalculator.cpp  ScoreCalculator.h  positions.cpp  positions.h  utility.cpp  utility.h
maps/: map1.txt  map2.txt
server/: CMakeLists.txt  Player.h  Simulation.cpp  Simulation.h  config.h  main.cpp  protocol.cpp  protocol.h
